--- a/index.html
+++ b/index.html
@@ -2,11 +2,50 @@
 <html>
 <head>
 	<title>Sinervis - Javascript Base</title>
+	<style type="text/css">
+		html, body {
+			padding: 0px;
+			margin: 0px;
+		}
+
+		#container {
+			padding: 1em;
+			font-family: Helvetica;
+			font-size: 1.5em;
+		}
+
+		a {
+			text-decoration: none;
+			border-left: 8px solid #999;
+			background-color: #eee;
+			padding: 4px;
+			color: red;
+			transition: all .5s;
+		}
+
+		a:hover {
+			background-color: #f3f3f3;
+			padding-left: 15px;
+			color: blue;
+		}
+
+		li {
+			margin-bottom: 15px;
+		}
+
+		ul {
+			list-style: none;
+		}
+
+	</style>
 </head>
 <body>
-<ul>
-	<li><a href="intro/">Intro, variabili, condizioni, cicli</a></li>
-	<li><a href="funzioni/">Metodi/funzioni, valori di ritorno, DOM</a></li>
-</ul>
+	<div id='container'>
+		<h3>Javascript Base</h3>
+		<ul>
+			<li><a href="intro/index.html">Intro, variabili, condizioni, cicli</a></li>
+			<li><a href="funzioni/">Metodi/funzioni, valori di ritorno, DOM</a></li>
+		</ul>
+	</div>
 </body>
 </html>
