--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<h3>Javascript Base</h3>
 		<ul>
 			<li><a href="intro/index.html">Intro, variabili, condizioni, cicli</a></li>
-			<li><a href="funzioni/">Metodi/funzioni, valori di ritorno, DOM</a></li>
+			<li><a href="funzioni/index.html">Metodi/funzioni, valori di ritorno, DOM</a></li>
 		</ul>
 	</div>
 </body>
