--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 		<ul>
 			<li><a href="intro/index.html">Intro, variabili, condizioni, cicli</a></li>
 			<li><a href="funzioni/index.html">Metodi/funzioni, valori di ritorno, DOM</a></li>
+			<li><a href="oggetti/index.html">Oggetti</a></li>
 		</ul>
 	</div>
 </body>
