--- a/oggetti/index.html
+++ b/oggetti/index.html
@@ -228,12 +228,12 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul>
 </section><section id="mostare-la-lista" class="slide level2">
 <h1>Mostare la lista</h1>
+<p>Dove lo mostro? Una lista, perfetto un <code>&lt;ul&gt; &lt;li&gt;...</code></p>
+<p>Per ogni task ripeto:</p>
 <ul>
-<li><p>Dove lo mostro? Una lista, perfetto un <code>&lt;ul&gt; &lt;li&gt;...</code></p></li>
-<li>Per ogni task ripeto:</li>
 <li>Mostro il titolo</li>
 <li>Imposto il colore secondo la priorita'</li>
-<li><p>Se e' fatto, linea in mezzo e in grigio</p></li>
+<li>Se e' fatto, linea in mezzo e in grigio</li>
 </ul>
 </section></section>
     </div>
